# spades-runner

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cleaner.rs  cli.rs  finder.rs  input.rs  io.rs  main.rs  parser.rs  runner.rs  utils.rs
test_files/: spade_runner.ini
