[package]
name = "spades-runner"
version = "0.1.0"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
glob = "0.3.0"
walkdir = "2.3.1"
spinners = "1.2.0"

[[bin]]
name = "spr"
path = "src/main.rs"