[package]
name = "spades-runner"
version = "0.3.3"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
glob = "0.3.0"
num_cpus = "1.13.0"
sysinfo = "0.16.4"
spinners = "1.2.0"
walkdir = "2.3.1"

[[bin]]
name = "spr"
path = "src/main.rs"